--- a/csplugins/trunk/ucsf/scooter/bioCycPlugin/resources/plugin.props
+++ b/csplugins/trunk/ucsf/scooter/bioCycPlugin/resources/plugin.props
@@ -6,17 +6,17 @@
 # -- The following properties are REQUIRED -- #
 
 # The plugin name that will be displayed to users
-pluginName=commandTool
+pluginName=bioCycPlugin
 
 # Description used to give users information about the plugin such as what it does.  
 # Html tags are encouraged for formatting purposes.
-pluginDescription=This plugin provides an interface to the new Cytoscape 2.7 command feature
+pluginDescription=This plugin provides a web services interface to Pathway Tools repositories
 
 # Plugin version number, this must be two numbers separated by a decimlal.  Ex. 0.2, 14.03
 pluginVersion=0.9
 
 # Compatible Cytoscape version
-cytoscapeVersion=2.7
+cytoscapeVersion=2.8
 
 # Category, use one of the categories listed on the website or create your own
 pluginCategory=Other
@@ -31,4 +31,4 @@ projectURL=http://www.rbvi.ucsf.edu/Research/cytoscape/
 pluginAuthorsIntsitutions=John "Scooter" Morris:UCSF
 
 # Date this plugin/plugin version was released
-releaseDate=June 1, 2010
+releaseDate=December 17, 2010
