Artifact ID changed.
git-svn-id: http://chianti.ucsd.edu/svn@23680 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/webservice-ncbi-client-impl/trunk/pom.xml
+++ b/core3/webservice-ncbi-client-impl/trunk/pom.xml
@@ -10,13 +10,13 @@
 	</parent>
 
 	<properties>
-		<bundle.symbolicName>org.cytoscape.webservice-ncbi-client</bundle.symbolicName>
+		<bundle.symbolicName>org.cytoscape.webservice-ncbi-client-impl</bundle.symbolicName>
 		<bundle.namespace>org.cytoscape.webservice.ncbi</bundle.namespace>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
-	<artifactId>webservice-ncbi-client</artifactId>
+	<artifactId>webservice-ncbi-client-impl</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
