--- a/core3/webservice-ncbi-client-impl/trunk/pom.xml
+++ b/core3/webservice-ncbi-client-impl/trunk/pom.xml
@@ -16,16 +16,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>webservice-ncbi-client-impl</artifactId>
-	<version>3.0.0-alpha1</version>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
 
 	<packaging>bundle</packaging>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/webservice-ncbi-client-impl/tags/webservice-ncbi-client-impl-3.0.0-alpha1</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/webservice-ncbi-client-impl/tags/webservice-ncbi-client-impl-3.0.0-alpha1</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/webservice-ncbi-client-impl/tags/webservice-ncbi-client-impl-3.0.0-alpha1</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/webservice-ncbi-client-impl/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/webservice-ncbi-client-impl/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/webservice-ncbi-client-impl/trunk</url>
     </scm>
 
     <repositories>
